--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -18,4 +18,4 @@ parameters:
     # A secret key that's used to generate certain security-related tokens
     secret: ThisTokenIsNotSoSecretChangeIt
 
-    apikey: '/?apikey=be9bb5cf'
+    OMDB_apikey: 'be9bb5cf'
