--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -44,7 +44,9 @@ security:
         main:
             anonymous: ~
 
-    access_control:
-      -
-        path: ^/user
-        roles: ['ROLE_ADMIN']
+##  access_control:
+#        -
+#          path: ^/user
+#          roles: ['ROLE_ADMIN']
+
+
