--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -29,6 +29,9 @@ security:
               pattern: ^/login$
               anonymous: ~
 
+        api:
+            pattern: ^/api
+            anonymous: ~
 
         secured_area:
             pattern: ^/
