--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -33,9 +33,17 @@ security:
               pattern: ^/user/create/first
               anonymous: ~
 
+        api_doc:
+            pattern: ^/api/doc$
+            anonymous: ~
+
         api:
             pattern: ^/api
-            anonymous: ~
+            stateless: true
+            provider: database
+            guard:
+              authenticators:
+                  -  AppBundle\Security\Authentication\ApiUserPasswordAuthenticator
 
         secured_area:
             pattern: ^/
